# PrzemysloweZastosowaniaRzeczywistosciWirtualnejIRozszerzonejSemIMagisterka

Lab1 LUT/: lut.m
Lab1 LUT/imlut/: imlut.m  license.txt
Lab11/: helperEstimateRelativePose.m  lab11.m
Lab12/: lab12.m
Lab13/: lab13.m
Lab2 Metody korekcji obrazu z kamery z uzyciem wzornikow/: wzornik_podstawowy.m  wzornik_rozerzony.m  wzorniki.m
Lab3/: lab3.m
Lab4/: lab4.m
Lab5/: CMakeLists.txt  README.osx  README.win64_msvc
Lab5/bindings/matlab/: lab5_psmove.m
Lab5/bindings/swig/: psmove.i
Lab5/contrib/: FindOCULUS_SDK.cmake  FindUSB1.cmake  build-osx-snapshot  common.cmake
Lab5/contrib/coreg_check_matlab/: mat4fromvec7.m  test.m
Lab5/examples/: CMakeLists.txt
Lab5/examples/c/: DK2_3dmodel.h  battery_check.c  coregister_dk2.cpp  distance_calibration.c  dump_calibration.c  example.c  moved_client_test.c  multiple.c  psmove_examples_opengl.h  test_calibration.cpp  test_capture_performance.c  test_end2end_latency.c  test_extension.c  test_fusion.c  test_gyroscope_error.c  test_led_pwm_frequency.c  test_led_update.c  test_opengl.cpp  test_opengl2.cpp  test_opengl3.cpp  test_read_performance.c  test_record_video.c  test_responsiveness.c  test_roi_size.c  test_tracker.c  tracker_camera_calibration.c  tuio_server.cpp
Lab5/examples/python/: cops_multiple.py
Lab5/include/: psmove_config.h
Lab5/src/: CMakeLists.txt  psmove.c  psmove_calibration.c  psmove_file.c  psmove_orientation.cpp  psmove_private.h  psmove_time.c
Lab5/src/daemon/: moved_client.c  moved_client.h
Lab5/src/math/: psmove_advanced_math.hpp  psmove_alignment.cpp  psmove_alignment.hpp  psmove_math.h  psmove_quaternion.cpp  psmove_quaternion.hpp  psmove_vector.c  psmove_vector.h
Lab5/src/platform/: psmove_osxsupport.m  psmove_winsupport.c
Lab5/src/tracker/: CMakeLists.txt  camera_control.c  camera_control.h  camera_control_private.h  psmove_fusion.cpp  psmove_kalman_filter.cpp  psmove_kalman_filter.h  psmove_lowpass_filter.c  psmove_lowpass_filter.h  psmove_tracker.c  tracker_helpers.h  tracker_trace.c  tracker_trace.h
Lab5/src/tracker/platform/: camera_control_macosx.c  camera_control_win32.c
Lab5/src/unit_tests/: CMakeLists.txt  alignment_unit_test.cpp  kalman_filter_unit_test.cpp  matrix_unit_test.cpp  quaternion_unit_test.cpp  unit_test.h  unit_test_suite.cpp  vector_unit_test.c
Lab5/src/utils/: CMakeLists.txt  magnetometer_calibration.cpp  moved.h  psmovepair.c  smoothing_calibration.cpp
Lab5/src/utils/visual_setup/: visual_coregister_dk2.cpp
Lab6/: generowanie_znacznikow.m  znaczniki_odczyt.m
Lab7/KinectSimulator-master/: KinectSimulator_Depth.m  KinectSimulator_IR.m  demo_KinectSimulator.m
Lab7/KinectSimulator-master/opcodemesh/matlab/: opcodemeshmex.mexmaca64
Lab8/: film.mov  poza.m
Lab8/tools/: BodyParts.m  EstimateBodyPoseUsingDeepLearningExample.mlx  addBodyPartPairsToBodyPoses.m  detectBodyPartsFromHeatmaps.m  downloadTrainedOpenPoseNet.m  filterBodyPoses.m  getBodyPartAffinityScores.m  getBodyPartPairCandidates.m  getBodyPoseParameters.m  getBodyPoses.m  getValidBodyPartPairs.m  renderBodyPoses.m
Lab9/: generator.py  generator_manual.py  index.py
